--- a/vite/package.json
+++ b/vite/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ionic/react": "^7.7.2",
+    "ionicons": "^7.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
