--- a/vite/package.json
+++ b/vite/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^10.8.0",
     "@ionic/react": "^7.7.2",
+    "firebase": "^10.8.0",
     "ionicons": "^7.2.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
